--- a/style.css
+++ b/style.css
@@ -1,30 +1,34 @@
 html, body {
   height: 100%;
-  display: flex;
-  flex-direction: column;
   margin: 0;
   overflow: hidden;
 }
 
 header {
-  height: 10vh;
-  line-height: 10vh;
+  height: 10%;
   background-color: lightpink;
   text-align: center;
 
   font-size: 6vh;
+  line-height: 10vh;
+
   font-family: Helvetica;
   color: saddlebrown;
+  border-bottom: 1px solid lightgray;
 }
 
 div {
-  flex: 1;
+  height: 80%;
 }
 
 #icon {
   height: 100%;
   width: 100%;
   object-fit: contain;
+}
+
+#icon:active {
+  background-color: lightcoral;
 }
 
 #pic {
@@ -34,13 +38,36 @@ div {
 }
 
 footer {
-  height: 10vh;
+  height: 10%;
   width: 100%;
   display: block;
   background-color:  lightpink;
   text-align: center;
+  border-top: 1px solid lightgray;
 }
 
 input {
   display: none;
+}
+
+/**
+ * iPhone 5
+ * You can also target devices with aspect ratio.
+ */
+
+@media screen and (device-aspect-ratio: 40/71) {
+  header {
+    // full height for iOS 7 = 920px
+    height: calc(0.1*920px);
+    line-height: calc(0.1*920px);
+    font-size: calc(0.06*920px);
+  }
+
+  div {
+    height:  calc(0.8*920px);
+  }
+
+  footer {
+    height: calc(0.1*920px);
+  }
 }
